--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/bump"]
 	path = libs/bump
 	url = https://github.com/kikito/bump.lua.git
+[submodule "libs/HC"]
+	path = libs/HC
+	url = https://github.com/vrld/HC.git
